# syncable-infra-gen-localAI

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
prompt/: README.md
src/: chroma_manager.py  config.yaml  embedder.py  gitingest_exp.py  infra_agent.py  infra_generator.py  llm_utils.py  main.py  prompt_templates.py  query_handler.py  retriever.py  setup_ollama.py  utils.py
src/infra_generator/: chroma_manager.py  config.yaml  embedder.py  gitingest_exp.py  infra_agent.py  infra_generator.py  main.py  prompt_templates.py  query_handler.py  retriever.py  setup_ollama.py  utils.py
src/infra_generator/tools/: git_tools.py  infra_tools.py
src/tools/: git_tools.py  infra_tools.py
test/: test_basic.py
