[project]
name = "code-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.12",
    "gitingest>=0.1.4",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-ollama>=0.3.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "tree-sitter-languages>=1.10.2",
    "typing-extensions>=4.14.0",
]

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
black = ">=23.7.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.5.0"
pre-commit = ">=3.3.0"
sphinx = ">=7.1.0"
sphinx-rtd-theme = ">=1.3.0"
bandit = ">=1.7.5"
safety = ">=2.3.5"
