[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-infra-generation"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A tool to generate infrastructure files (Dockerfile, etc.) for codebases using local LLMs."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "chromadb",
    "langchain",
    "langchain-community",
    "pyyaml",
    "requests",
    "tqdm",
    "tree-sitter-languages",
    "typing-extensions",
    "langchain-ollama",
    "uv",
    "gitingest"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/local-AI-infra-generation"
"Bug Tracker" = "https://github.com/yourusername/local-AI-infra-generation/issues"

# This creates the command-line tool
[project.scripts]
infra-gen = "infra_generator.main:main"

[tool.setuptools.packages.find]
where = ["src"]

# This tells setuptools to include non-Python files
[tool.setuptools.package-data]
"infra_generator" = ["config.yaml"]

[tool.semantic_release]
version_variable = "src/infra_generator/__init__.py:__version__"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"